# patch-pulse-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml
npm/: package.json.tmpl
npm/app/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
npm/app/lib/: index.js
npm/app/src/: index.ts
src/: lib.rs  main.rs
src/models/: package_json.rs
src/utils/: mod.rs  read_package_json.rs  tests.rs
tests/data/: valid_package.json
