[package]
name = "patch-pulse-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/barrymichaeldoyle/patch-pulse-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
semver = "1.0"
[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = [ "vendored" ] }